# backend-challenge-python

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: booking_router.py  crud.py  database.py  main.py  models.py  schemas.py  test_bookings.py
app/tests/: test_booking_endpoints.py  test_database.py  test_models.py
