[project]
name = "backend-challenge-python"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "freezegun>=1.5",
]

[tool.pytest.ini_options]
testpaths = ["app"]
markers = [
    "freeze_time: Freeze time to a specific date for testing",
]
